--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>EHS TSA</title>
 		<link rel="stylesheet" href="stylesheet.css">
 		<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+		<link href="http://vjs.zencdn.net/5.0.0/video-js.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -14,7 +15,9 @@
 			<div class="jumbotron">
 				<h1 class="col-md-12">eastlake animes</h1>
 				<div class="row">
-					
+					<video id="vid" class="video-js" controls preload="auto" width="640" heaight="264" poster="poster.jpg" data-setup"{}">
+						<source src="video.mp4" type="video/mp4">
+					</video>
 				</div>
 			</div>
 		</div>
