--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<div class="jumbotron">
 				<h1 class="col-md-12">eastlake animes</h1>
 				<div class="row">
-					<video id="vid" class="video-js" controls preload="auto" width="640" heaight="264" poster="poster.jpg" data-setup"{}">
-						<source src="video.mp4" type="video/mp4">
+					<video id="vid" class="video-js" controls preload="auto" width="1280" heaight="720" poster="poster.jpg" data-setup"{}">
+						<source src="ed2.mkv" type="video/mkv">
 					</video>
 				</div>
 			</div>
