--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<div class="jumbotron">
 				<h1 class="col-md-12">eastlake animes</h1>
 				<div class="row">
-					<video id="vid" class="video-js" controls preload="auto" width="1280" heaight="720" poster="poster.jpg" data-setup"{}">
-						<source src="ed2.mkv" type="video/mkv">
+					<video id="vid" class="video-js" controls preload="auto" width="640" heaight="480" poster="poster.jpg" data-setup"{}">
+						<source src="https://www.dropbox.com/s/ue7q8ucsag2d82s/1.mp4" type="video/mp4">
 					</video>
 				</div>
 			</div>
