--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h1 class="col-md-12">eastlake animes</h1>
 				<div class="row">
 					<video id="vid" class="video-js" controls preload="auto" width="640" heaight="480" poster="poster.jpg" data-setup"{}">
-						<source src="https://www.dropbox.com/s/ue7q8ucsag2d82s/1.mp4" type="video/mp4">
+						<source src="https://www.dropbox.com/s/ue7q8ucsag2d82s/1.mp4?dl=0" type="video/mp4">
 					</video>
 				</div>
 			</div>
