--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h1 class="col-md-12">eastlake animes</h1>
 				<div class="row">
 					<video id="vid" class="video-js" controls preload="auto" width="1280" heaight="720" poster="poster.jpg" data-setup"{}">
-						<source src="https://photos-3.dropbox.com/t/2/AAC1eY3NdUqz4aItssiiHo-gZVXylS2tOUDL3NQMxgEt6Q/12/124281957/jpeg/32x32/1/_/1/3/1.mp4/EIjG2l8YqrcDIAcoBw/Dragon%20Ball%20Z%20English/1.mp4?size=1600x1200&size_mode=2" type="video/mp4">
+						<source src="https://www.dropbox.com/playlist/Dragon%20Ball%20Z%20English/1.mp4?_subject_uid=124281957" type="video/mp4">
 					</video>
 				</div>
 			</div>
