--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<div class="jumbotron">
 				<h1 class="col-md-12">eastlake animes</h1>
 				<div class="row">
-					<video id="vid" class="video-js" controls preload="auto" width="640" heaight="360" poster="poster.jpg" data-setup"{}">
-						<source src="https://www.dropbox.com/playlist/Dragon%20Ball%20Z%20English/1.mp4?_subject_uid=124281957" type="video/mp4">
+					<video id="vid" class="video-js" controls preload="auto" width="640" heaight="360" poster="https://photos-3.dropbox.com/t/2/AAC1eY3NdUqz4aItssiiHo-gZVXylS2tOUDL3NQMxgEt6Q/12/124281957/jpeg/32x32/1/_/1/3/1.mp4/EIjG2l8YqrcDIAcoBw/Dragon%20Ball%20Z%20English/1.mp4?size=1024x768&size_mode=2" data-setup"{}">
+						<source src="https://www.dropbox.com/s/ue7q8ucsag2d82s/1.mp4?dl=0" type="video/mp4">
 					</video>
 				</div>
 			</div>
