--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                 <a class="button selected" href="index.html"><b>Home</b></a>
               </li>
               <li>
-                <a class="button" href="about.html"><b>About</b></a>
+                <a class="button" href="about.html"><b>Fiona</b></a>
               </li>
               <li>
-                <a class="button" href="events.html"><b>Events</b></a>
+                <a class="button" href="events.html"><b>></b></a>
               </li>
               <li>
-                <a class="button" href="courses.html"><b>courses</b></a>
+                <a class="button" href="courses.html"><b>Emma</b></a>
               </li>
               <li>
-                <a class="button" href="purpose.html"><b>Purpose</b></a>
+                <a class="button" href="purpose.html"><b>BISH</b></a>
               </li>
             </ul>
           </div>
